log.txt
shkch@homesever:~/2025-1/autoeBPF$ make
clang -O2 -g -Wall -Werror -target bpf -nostdinc -isystem /usr/lib/llvm-14/lib/clang/14.0.0/../../include -isystem /usr/lib/llvm-14/lib/clang/14.0.0/../../../lib/clang/*/include -isystem /usr/include -isystem /usr/src/linux-headers-5.15.0-142-generic/include/uapi  -Iinclude -I. -I/usr/src/linux-headers-5.15.0-142-generic/tools/lib/bpf/include -c bpf/_llseek_monitor.bpf.c -o _llseek_monitor.bpf.o
In file included from bpf/_llseek_monitor.bpf.c:9:
In file included from include/common_event.h:3:
In file included from /usr/include/linux/types.h:9:
/usr/include/linux/posix_types.h:27:3: error: typedef redefinition with different types ('struct __kernel_fd_set' vs 'struct __kernel_fd_set')
} __kernel_fd_set;
  ^
include/vmlinux.h:50434:3: note: previous definition is here
} __kernel_fd_set;
  ^
In file included from bpf/_llseek_monitor.bpf.c:9:
In file included from include/common_event.h:3:
In file included from /usr/include/linux/types.h:9:
In file included from /usr/include/linux/posix_types.h:36:
In file included from /usr/include/asm/posix_types.h:7:
In file included from /usr/include/asm/posix_types_64.h:18:
/usr/include/asm-generic/posix_types.h:68:22: error: typedef redefinition with different types ('unsigned int' vs '__kernel_ulong_t' (aka 'unsigned long'))
typedef unsigned int    __kernel_size_t;
                        ^
include/vmlinux.h:51:26: note: previous definition is here
typedef __kernel_ulong_t __kernel_size_t;
                         ^
In file included from bpf/_llseek_monitor.bpf.c:9:
In file included from include/common_event.h:3:
In file included from /usr/include/linux/types.h:9:
In file included from /usr/include/linux/posix_types.h:36:
In file included from /usr/include/asm/posix_types.h:7:
In file included from /usr/include/asm/posix_types_64.h:18:
/usr/include/asm-generic/posix_types.h:69:14: error: typedef redefinition with different types ('int' vs '__kernel_long_t' (aka 'long'))
typedef int             __kernel_ssize_t;
                        ^
include/vmlinux.h:53:25: note: previous definition is here
typedef __kernel_long_t __kernel_ssize_t;
                        ^
In file included from bpf/_llseek_monitor.bpf.c:9:
In file included from include/common_event.h:3:
In file included from /usr/include/linux/types.h:9:
In file included from /usr/include/linux/posix_types.h:36:
In file included from /usr/include/asm/posix_types.h:7:
In file included from /usr/include/asm/posix_types_64.h:18:
/usr/include/asm-generic/posix_types.h:70:14: error: typedef redefinition with different types ('int' vs '__kernel_long_t' (aka 'long'))
typedef int             __kernel_ptrdiff_t;
                        ^
include/vmlinux.h:49232:25: note: previous definition is here
typedef __kernel_long_t __kernel_ptrdiff_t;
                        ^
In file included from bpf/_llseek_monitor.bpf.c:9:
In file included from include/common_event.h:3:
In file included from /usr/include/linux/types.h:9:
In file included from /usr/include/linux/posix_types.h:36:
In file included from /usr/include/asm/posix_types.h:7:
In file included from /usr/include/asm/posix_types_64.h:18:
/usr/include/asm-generic/posix_types.h:81:3: error: typedef redefinition with different types ('struct __kernel_fsid_t' vs 'struct __kernel_fsid_t')
} __kernel_fsid_t;
  ^
include/vmlinux.h:23783:3: note: previous definition is here
} __kernel_fsid_t;
  ^
In file included from bpf/_llseek_monitor.bpf.c:9:
include/common_event.h:833:5: error: unknown type name 'socklen_t'
    socklen_t addrlen;
    ^
include/common_event.h:840:5: error: unknown type name 'socklen_t'
    socklen_t addrlen;
    ^
include/common_event.h:859:16: error: field has incomplete type 'const void'
    const void payload;
               ^
include/common_event.h:866:18: error: field has incomplete type 'struct timex'
    struct timex buf;
                 ^
include/common_event.h:866:12: note: forward declaration of 'struct timex'
    struct timex buf;
           ^
include/common_event.h:889:10: error: field has incomplete type 'void'
    void addr;
         ^
include/common_event.h:894:30: error: field has incomplete type 'struct __user_cap_header'
    struct __user_cap_header hdrp;
                             ^
include/common_event.h:894:12: note: forward declaration of 'struct __user_cap_header'
    struct __user_cap_header hdrp;
           ^
include/common_event.h:895:28: error: field has incomplete type 'struct __user_cap_data'
    struct __user_cap_data datap;
                           ^
include/common_event.h:895:12: note: forward declaration of 'struct __user_cap_data'
    struct __user_cap_data datap;
           ^
include/common_event.h:900:30: error: field has incomplete type 'struct __user_cap_header'
    struct __user_cap_header hdrp;
                             ^
include/common_event.h:894:12: note: forward declaration of 'struct __user_cap_header'
    struct __user_cap_header hdrp;
           ^
include/common_event.h:935:18: error: field has incomplete type 'struct timex'
    struct timex buf;
                 ^
include/common_event.h:866:12: note: forward declaration of 'struct timex'
    struct timex buf;
           ^
include/common_event.h:941:21: error: field has incomplete type 'struct timespec'
    struct timespec res;
                    ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:947:21: error: field has incomplete type 'struct timespec'
    struct timespec tp;
                    ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:954:27: error: field has incomplete type 'const struct timespec'
    const struct timespec request;
                          ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:955:21: error: field has incomplete type 'struct timespec'
    struct timespec remain;
                    ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
include/common_event.h:961:27: error: field has incomplete type 'const struct timespec'
    const struct timespec tp;
                          ^
include/common_event.h:941:12: note: forward declaration of 'struct timespec'
    struct timespec res;
           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [Makefile:20: _llseek_monitor.bpf.o] Error 1
shkch@homesever:~/2025-1/autoeBPF$
